fixed copy, fixed green line alignment, changed link to resume, rotated logo.

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -208,10 +208,14 @@ header {
             transform: translateX(20px);
             transition: 0.2s;
         }
-    
-        &:hover::after { 
-            opacity: 1;
+
+        @media(min-width:711px) {
+            &:hover::after { 
+                opacity: 1;
+            }
         }
+    
+        
     }
     
 
@@ -244,6 +248,7 @@ header {
         fill: none;
         stroke: white;
         stroke-width: 10px; 
+        transform: rotateZ(90deg);
         
     }
 
@@ -266,7 +271,7 @@ header {
 
     p {
         margin-bottom: 30px;
-        max-width: 530px;
+        max-width: 500px;
         margin: 0 auto;
     }
 
@@ -359,8 +364,8 @@ header {
 
         img {
             max-width: 100%;
-            transform: scale(1.8);
-            object-position: 10px 10px;
+            transform: scale(1.3);
+            object-position: 10px -20px;
             // transform: translateX(10px)
         }
     }
@@ -369,6 +374,10 @@ header {
         display: flex;
         flex-wrap: wrap;
         justify-content: left;
+
+        p:first-child {
+            padding-bottom: 10px;
+        }
     }
 
     .button {
@@ -401,7 +410,7 @@ header {
             width: 100px;
             background-color: $green;
             position: absolute;
-            bottom: 4px;
+            bottom: 20px;
             margin-left: 5px;
         }
 
@@ -530,7 +539,7 @@ header {
     text-align: center;
     padding: 80px;
 }
-
+// ===================== contact styles =========================
 .contact {
 
     // * {border: 1px solid tomato}
@@ -546,7 +555,7 @@ header {
     }
 
     h3 {
-        padding-bottom: 70px;
+        padding-bottom: 5px;
         text-align: center;
         color: white;
         position: relative;
@@ -558,12 +567,16 @@ header {
             width: 100px;
             background-color: $green;
             position: absolute;
-            bottom: 73px;
+            bottom: 25px;
             margin-left: 5px;
-
         }
-
-
+    }
+    // "I'd love to discuss ideas..."
+    p {
+        text-align: center;
+        max-width: 500px;
+        margin: 0 auto;
+        padding-bottom: 60px;
     }
 
     .formTop {
